chore: add hostname and mysql statefulset

--- a/statefulset/ergo/web/templates/partials/header.html
+++ b/statefulset/ergo/web/templates/partials/header.html
@@ -2,6 +2,6 @@
 <div class="leading-10">
     <h1 class="text-slate-950 font-bold text-4xl">Ergo</h1>
     <h3 class="text-gray-700 text-2xl font-semibold mt-4">The Task Manager of the Future</h3>
-    <p class="mt-4 text-xl">Response from: <hostname> </p>
+    <p class="mt-4 text-xl">Response from host: {{.Hostname}} </p>
 </div>
 {{end}}
